Replace max width with min

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,62 @@ section {
   padding-top: .2em;
   padding-left: 1em;
   padding-bottom: .2rem;
+  position: relative;
+  margin: 0;
 }
+
+.container {
+  position: relative;
+}
+
+@media only screen and (min-width: 608px) {
+
+  section{
+    z-index: 10;
+    color: #fff;
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 110%;
+    line-height: 1.4;
+    padding: 1em;
+    border-radius: 4px;
+    width: 75%;
+}
+
+@media only screen and (min-width: 960px) {
+
+  section{
+    z-index: 10;
+    color: #fff;
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 120%;
+    line-height: 1.5;
+    padding: 1em;
+    border-radius: 4px;
+    width: 75%;
+  }
+
+  @media only screen and (min-width: 1140px) {
+
+    section{
+      z-index: 10;
+      color: #fff;
+      background-color: rgba(0, 0, 0, .3);
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      font-size: 130%;
+      line-height: 1.5;
+      padding: 1em;
+      border-radius: 4px;
+      width: 75%;
+    }
+
 
 h2 {
   font-family: "Denk One", sans-serif;
@@ -27,18 +82,10 @@ h2 {
 }
 
 p {
-  line-height: 1.3em; 
+  line-height: 1.3em;
 }
 
 img {
   width: 100%;
   display: flex;
-}
-
-@media only screen and (min-width: 60em) {
-
-  html {
-    font-size: 120%
-    line-height: 1.5;
-  }
 }
