--- a/css/main.css
+++ b/css/main.css
@@ -21,70 +21,6 @@ body {
   margin: 0;
 }
 
-section {
-  background-color: #e2e2e2;
-  display: block;
-  width: 100%;
-  padding-top: .2em;
-  padding-left: 1em;
-  padding-bottom: .2rem;
-  position: relative;
-  margin: 0;
-}
-
-.container {
-  position: relative;
-}
-
-@media only screen and (min-width: 608px) {
-
-  section{
-    z-index: 10;
-    color: #fff;
-    background-color: rgba(0, 0, 0, .3);
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    font-size: 110%;
-    line-height: 1.4;
-    padding: 1em;
-    border-radius: 4px;
-    width: 75%;
-}
-
-@media only screen and (min-width: 960px) {
-
-  section{
-    z-index: 10;
-    color: #fff;
-    background-color: rgba(0, 0, 0, .3);
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    font-size: 120%;
-    line-height: 1.5;
-    padding: 1em;
-    border-radius: 4px;
-    width: 75%;
-  }
-
-  @media only screen and (min-width: 1140px) {
-
-    section{
-      z-index: 10;
-      color: #fff;
-      background-color: rgba(0, 0, 0, .3);
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      font-size: 130%;
-      line-height: 1.5;
-      padding: 1em;
-      border-radius: 4px;
-      width: 75%;
-    }
-
-
 h2 {
   font-family: "Denk One", sans-serif;
   font-size: 1.5rem;
@@ -97,5 +33,81 @@ p {
 
 img {
   width: 100%;
-  display: flex;
+  display: block;
+}
+
+section {
+  background-color: #e2e2e2;
+  display: block;
+  width: 100%;
+  padding-top: .2em;
+  padding-left: 1em;
+  padding-bottom: .2rem;
+  position: relative;
+  margin: 0;
+}
+
+div {
+  position: absolute;
+}
+
+@media only screen and (min-width: 400px) {
+
+  section{
+    position: absolute;
+    font-size: 100%;
+    line-height: 1.3;
+  }
+
+.container {
+  position: relative;
+}
+}
+
+@media only screen and (min-width: 608px) {
+
+  section{
+    z-index: 10;
+    color: #fff;
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 120%;
+    line-height: 1.5;
+    border-radius: 4px;
+    width: 20em;
+  }
+  }
+
+@media only screen and (min-width: 960px) {
+
+  section{
+    z-index: 10;
+    color: #fff;
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 110%;
+    line-height: 1.4;
+    border-radius: 4px;
+    width: 20em;
+  }
+  }
+  @media only screen and (min-width: 1140px) {
+
+    section{
+      z-index: 10;
+      color: #fff;
+      background-color: rgba(0, 0, 0, .3);
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      font-size: 130%;
+      line-height: 1.5;
+      border-radius: 4px;
+      width: 20em;
+    }
+
 }
